2010-05-21  Gavin Barraclough  <barraclough@apple.com>

        Unreviewed build fix.

        Interpreter fix following r59974.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):
        * runtime/JSPropertyNameIterator.cpp:
        (JSC::JSPropertyNameIterator::get):
        * runtime/JSPropertyNameIterator.h:

2010-05-21  Gavin Barraclough  <barraclough@apple.com>

        Rubber stamped by Oliver Hunt.

        Interpreter fix following r59939.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

2010-05-21  David Levin  <levin@chromium.org>

        Unreviewed build fix.

        * wtf/SizeLimits.cpp: Removed a check while I figure out how to write it properly.

2010-05-21  David Levin  <levin@chromium.org>

        Reviewed by Darin Adler.

        Enforce size constraints on various data structures in JavaScriptCore/wtf.
        https://bugs.webkit.org/show_bug.cgi?id=39327

        I only modified the default build for OSX and Chromium's build file to include WTFCompileAsserts.cpp
        as those should be sufficient to catch regressions on the size of the data structures.

        * JavaScriptCore.gypi: Added the WTFCompileAsserts.cpp file.
        * JavaScriptCore.xcodeproj/project.pbxproj: Added the WTFCompileAsserts.cpp file.
        * runtime/UString.cpp: Added a compile assert for UString size.
        * wtf/SizeLimits.cpp: Added compile asserts for data structures that didn't have cpp files.
        * wtf/text/StringImpl.cpp: Added a compile assert for StringImpl size.

2010-05-21  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 39509 - Exceptions raised when JSString::value() is called not always properly thrown.
        Missing some CHECK_FOR_EXCEPTION()s, cleanup NativeError construction (adding a property
        via the prototype was inefficient, and whilst trivially true that the property is is not